# HZGS

./: .gitignore  Acceptance.sh  build_horizon_gs_py312_pt280_cu129.ps1  mean_psnr_pairs.py  render.py  run_to_steamVR.sh
config/hybrid/: example_scene.yaml
config/xr/: openxr_road_anchor_frame100.yaml  openxr_road_anchor_train_street_00055.yaml
gaussian_renderer/: render.py
preprocess/: image2video.py
tools/: analyze_xr_log.py  avg_psnr.py  build_road_subset.py  diagnose_xr_anchor_selection.py  make_xr_config_from_anchor.py
tools/openxr_cuda_demo/: CMakeLists.txt  README.md
tools/openxr_cuda_demo/src/: cuda_renderer.cu  cuda_renderer.h  main.cpp
xr/: openxr_bridge.py  session.py
